reverting contacts controller to fix api documentation
